# Code_Practice

./: .gitignore  COMPLETE_FEATURE_SET.md  QWEN.md  README.MD  SETUP.md  bar_descriptions.py  country_codes.py  dice_visual.py  highs_lows.py  main.py  manage.py  na_populations.py  package.json  pyproject.toml  python_repose.py  requeirements.txt  rw_visual.py  secret_key.env.new  start_server.sh  test_record_visualization.py  world_population.py
.github/workflows/: ci.yml
Data_Visuallization/heaker_news/: hn_submissions.py
Data_Visuallization/random_walk/: die.py  random_walk.py
Data_Visuallization/world_population_maps/: americas.py
Learning_Log/: .gitignore  ReadMe.md  USER_QUICK_GUIDE.md  db.sqlite3  start_server.sh
Learning_Log/data_visualization/: models.py  urls.py  views.py
Learning_Log/data_visualization/migrations/: 0001_initial.py
Learning_Log/data_visualization/scripts/: generate_charts.py  random_walk_chart.py
Learning_Log/learning_log/: settings.py  urls.py
Learning_Log/learning_logs/: forms.py  models.py  urls.py  views.py
Learning_Log/learning_logs/migrations/: 0001_initial.py  0002_alter_topic_date_added_entry.py  0003_topic_owner.py
Learning_Log/media/uploads/: test_sales_data.json  test_temperature_data.csv
Learning_Log/users/: views.py
data_visualization/: DATA_PROCESSING_README.md  DATA_VISUALIZATION_README.md  IMPLEMENTATION_SUMMARY.md  apps.py  models.py  record_parse.py  record_summary.json  record_visualization.py  urls.py  views.py  views_record_player.py
data_visualization/management/commands/: create_charts.py  generate_charts.py
data_visualization/scripts/: generate_charts.py  random_walk_chart.py  temperature_chart.py
data_visualization/templates/data_visualization/: base.html  chart_detail.html  charts.html  index.html  process_data.html  process_result.html
data_visualization/tutorial/: QUICK_TEST_GUIDE.md  generate_charts.py
learning_log/: asgi.py  settings.py  settings_ci.py  urls.py  wsgi.py
learning_logs/: admin.py  forms.py  models.py  urls.py  views.py
learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
static/css/: style.css
static/js/: particles.js
tests/: conftest.py  test_data_visualization.py  test_forms.py  test_models.py  test_urls.py  test_users.py  test_views.py
users/: urls.py  views.py
users/templates/users/: login.html  logout.html  register.html
(+11 files in other folders)
