[project]
name = "code-practice"
version = "0.1.0"
description = "Learning Log Django Project"
requires-python = ">=3.11"
dependencies = [
    "cyber-record>=0.1.8",
    "django>=5.0",
    "django-bootstrap3",
    "matplotlib",
    "pillow",
    "protobuf==3.20.3",
    "python-dotenv",
    "record-msg>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "django-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learning_log", "learning_logs", "users", "data_visualization"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "learning_log.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.django]
version = "5.2"

# Ruff 配置
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "*/migrations/*",
    "*/scripts/*",
    "*/tutorial/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "DJ"]
ignore = ["E501", "F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"

# mypy 配置
[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

# 覆盖率配置
[tool.coverage.run]
source = ["learning_logs", "users", "data_visualization"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/management/commands/*",
    "*/scripts/*",
]

[tool.coverage.report]
fail_under = 55
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "raise NotImplementedError",
    "if DEBUG:",
    "if __name__",
]
